[gd_scene load_steps=6 format=3 uid="uid://beei5hfmy1wrw"]

[ext_resource type="Script" uid="uid://cu81u36516mj7" path="res://Sences/Targets/targets.gd" id="1_l8c2i"]
[ext_resource type="Texture2D" uid="uid://bdxigmte87ea8" path="res://Assets/PNG/Objects/stick_wood_outline.png" id="2_xm0lx"]
[ext_resource type="Texture2D" uid="uid://cojlv86n2kemb" path="res://Assets/PNG/Objects/target_red3_outline.png" id="3_xm0lx"]
[ext_resource type="Texture2D" uid="uid://qhnmp0hxdj2g" path="res://Assets/PNG/HUD/crosshair_red_small.png" id="4_4cba4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a525t"]
radius = 72.0278

[node name="Targets" type="Area2D"]
script = ExtResource("1_l8c2i")
target_type = 2
minimum_speed = 50
maximum_speed = 400

[node name="StickWoodFixedOutline" type="Sprite2D" parent="."]
position = Vector2(-1, 125)
texture = ExtResource("2_xm0lx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_xm0lx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_a525t")

[node name="BadDuckTimer" type="Timer" parent="."]

[node name="TTKTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ShootMark" type="Sprite2D" parent="."]
visible = false
scale = Vector2(2.64286, 2.64286)
texture = ExtResource("4_4cba4")

[connection signal="timeout" from="BadDuckTimer" to="." method="_on_bad_duck_timer_timeout"]
[connection signal="timeout" from="TTKTimer" to="." method="_on_ttk_timer_timeout"]
